add rslang project, fix position of cv button

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -17,6 +17,14 @@
   },
   {
     "id": 3,
+    "title": "RSLang",
+    "url": "https://rslang-team40-alexey-koren.netlify.app/",
+    "img": "static/media/rslang.png",
+    "description": "I learned how to implement React hooks in real project, working in team with trello cards, regular discord and telegram discussing  ",
+    "githubUrl": "https://github.com/Alexey-Koren/rslang/tree/master"
+  },
+  {
+    "id": 4,
     "title": "Movie Searcher",
     "url": "https://yuriy17-movie-search.netlify.app",
     "img": "static/media/movie-searcher.png",
@@ -24,7 +32,7 @@
     "githubUrl": "https://github.com/Yuriy17/portfolio-2019"
   },
   {
-    "id": 4,
+    "id": 5,
     "title": "Virtual keyboard",
     "url": "https://yuriy17.github.io/codejam-virtual-keyboard/",
     "img": "static/media/virtual-keyboard.png",
@@ -32,7 +40,7 @@
     "githubUrl": "https://github.com/Yuriy17/codejam-virtual-keyboard/"
   },
   {
-    "id": 5,
+    "id": 6,
     "title": "Singolo",
     "url": "https://yuriy17-singolo.netlify.app",
     "img": "static/media/singolo.png",
@@ -40,7 +48,7 @@
     "githubUrl": "https://github.com/Yuriy17/singolo"
   },
   {
-    "id": 6,
+    "id": 7,
     "title": "Codejam Pallete",
     "url": "https://yuriy17-codejam-pallete.netlify.app",
     "img": "static/media/codejam-pallete.png",
@@ -48,7 +56,7 @@
     "githubUrl": "https://github.com/Yuriy17/singolo"
   },
   {
-    "id": 7,
+    "id": 8,
     "title": "Lodash presentation",
     "url": "https://yuriy17-lodash-presentation.netlify.app",
     "img": "static/media/lodash-presentation.png",
@@ -56,7 +64,7 @@
     "githubUrl": "https://github.com/Yuriy17/lodash-presentation"
   },
   {
-    "id": 8,
+    "id": 9,
     "title": "My first portfolio",
     "url": "https://yuriy17-portfolio-2019.netlify.app",
     "img": "static/media/portfolio2019.png",
@@ -64,7 +72,7 @@
     "githubUrl": "https://github.com/Yuriy17/portfolio-2019"
   },
   {
-    "id": 9,
+    "id": 10,
     "title": "Repair design project",
     "url": "https://yuriy17-repair-design-project.netlify.app",
     "img": "static/media/repair-design-project.png",
@@ -72,7 +80,7 @@
     "githubUrl": "https://github.com/Yuriy17/repair-design-project"
   },
   {
-    "id": 10,
+    "id": 11,
     "title": "The yalow",
     "url": "https://yuriy17-theyalow.netlify.app/",
     "img": "static/media/theyalow.png",
