--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,22 +1,42 @@
 [
   {
     "id": 1,
-    "title": "Weather forecast",
-    "url": "https://yuriy17-fancy-weather.netlify.app/",
-    "img": "static/media/fancy-weather.png",
-    "description": "I learned how to adapt MVC pattern to Javascript, also use ES6 syntax, multiple languages, material components",
-    "githubUrl": "https://github.com/Yuriy17/fancy-weather"
+    "title": "Issoft",
+    "url": "https://issoft.by/innovation/ai-and-machine-learning/",
+    "img": "static/media/issoft.png",
+    "description": "Creating landings, support frontend part over year"
   },
-
   {
     "id": 2,
+    "title": "Maxler",
+    "url": "https://maxler.com/",
+    "img": "static/media/maxler.png",
+    "description": "Creating landings, support frontend part over year"
+  },
+  {
+    "id": 3,
+    "title": "AMS Tara",
+    "url": "http://amstara.cmdev.ru/",
+    "img": "static/media/ams.png",
+    "description": "Creating all landings, support frontend part",
+    "githubUrl": "https://github.com/Yuriy17/theyalow"
+  },
+  {
+    "id": 4,
+    "title": "Gde dengi",
+    "url": "https://yuriy17-theyalow.netlify.app/",
+    "img": "static/media/gde-dengi.png",
+    "description": "Creating all landings, support frontend part"
+  },
+  {
+    "id": 5,
     "title": "English for kids",
     "url": "https://yuriy17-english-for-kids.netlify.app/",
     "img": "static/media/english-for-kids.png",
     "description": "I learned developing spa application with aws speech service, ES6, SCSS syntax, used Observable pattern"
   },
   {
-    "id": 3,
+    "id": 6,
     "title": "RSLang",
     "url": "https://rslang-team40-alexey-koren.netlify.app/",
     "img": "static/media/rslang.png",
@@ -24,7 +44,7 @@
     "githubUrl": "https://github.com/Alexey-Koren/rslang/tree/master"
   },
   {
-    "id": 4,
+    "id": 7,
     "title": "Movie Searcher",
     "url": "https://yuriy17-movie-search.netlify.app",
     "img": "static/media/movie-searcher.png",
@@ -32,7 +52,7 @@
     "githubUrl": "https://github.com/Yuriy17/portfolio-2019"
   },
   {
-    "id": 5,
+    "id": 8,
     "title": "Virtual keyboard",
     "url": "https://yuriy17.github.io/codejam-virtual-keyboard/",
     "img": "static/media/virtual-keyboard.png",
@@ -40,7 +60,7 @@
     "githubUrl": "https://github.com/Yuriy17/codejam-virtual-keyboard/"
   },
   {
-    "id": 6,
+    "id": 9,
     "title": "Singolo",
     "url": "https://yuriy17-singolo.netlify.app",
     "img": "static/media/singolo.png",
@@ -48,7 +68,15 @@
     "githubUrl": "https://github.com/Yuriy17/singolo"
   },
   {
-    "id": 7,
+    "id": 10,
+    "title": "Weather forecast",
+    "url": "https://yuriy17-fancy-weather.netlify.app/",
+    "img": "static/media/fancy-weather.png",
+    "description": "I learned how to adapt MVC pattern to Javascript, also use ES6 syntax, multiple languages, material components",
+    "githubUrl": "https://github.com/Yuriy17/fancy-weather"
+  },
+  {
+    "id": 11,
     "title": "Codejam Pallete",
     "url": "https://yuriy17-codejam-pallete.netlify.app",
     "img": "static/media/codejam-pallete.png",
@@ -56,7 +84,7 @@
     "githubUrl": "https://github.com/Yuriy17/singolo"
   },
   {
-    "id": 8,
+    "id": 12,
     "title": "Lodash presentation",
     "url": "https://yuriy17-lodash-presentation.netlify.app",
     "img": "static/media/lodash-presentation.png",
@@ -64,7 +92,7 @@
     "githubUrl": "https://github.com/Yuriy17/lodash-presentation"
   },
   {
-    "id": 9,
+    "id": 13,
     "title": "My first portfolio",
     "url": "https://yuriy17-portfolio-2019.netlify.app",
     "img": "static/media/portfolio2019.png",
@@ -72,7 +100,7 @@
     "githubUrl": "https://github.com/Yuriy17/portfolio-2019"
   },
   {
-    "id": 10,
+    "id": 14,
     "title": "Repair design project",
     "url": "https://yuriy17-repair-design-project.netlify.app",
     "img": "static/media/repair-design-project.png",
@@ -80,7 +108,7 @@
     "githubUrl": "https://github.com/Yuriy17/repair-design-project"
   },
   {
-    "id": 11,
+    "id": 15,
     "title": "The yalow",
     "url": "https://yuriy17-theyalow.netlify.app/",
     "img": "static/media/theyalow.png",
